<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/rootLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- AppBar -->
            <android.support.design.widget.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/collapsingToolbarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:contentScrim="?attr/colorPrimary"
                    app:expandedTitleGravity="center"
                    app:expandedTitleTextAppearance="@style/expandedTitle"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        app:theme="@style/AppTheme"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@mipmap/me_bg"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.7">

                        <TextView
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginTop="150dp"
                            android:layout_centerHorizontal="true"
                            android:text="@string/one_word"
                            android:textColor="@color/black" />

                    </RelativeLayout>

                </android.support.design.widget.CollapsingToolbarLayout>
            </android.support.design.widget.AppBarLayout>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/app_name" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/desc"
                        android:textColor="@color/black"
                        android:paddingLeft="10dp"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/desc_api_zhihu"
                        android:textColor="@color/black"
                        android:paddingLeft="10dp"
                        android:textSize="12sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/app_dev" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/desc_dev"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/desc_dev_4"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/desc_dev_1"
                        android:paddingLeft="10dp"
                        android:textSize="12sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/desc_dev_2"
                        android:paddingLeft="10dp"
                        android:textSize="12sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/desc_dev_3"
                        android:paddingLeft="10dp"
                        android:textSize="12sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/app_me" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:paddingLeft="10dp"
                        android:text="@string/me_1"
                        android:textSize="12sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/me_2"
                        android:paddingLeft="10dp"
                        android:textSize="12sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/me_3"
                        android:paddingLeft="10dp"
                        android:textSize="12sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/me_4"
                        android:paddingLeft="10dp"
                        android:textSize="12sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/app_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="* QQ : "
                            android:textSize="12sp"
                            android:paddingLeft="10dp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/tv_qq"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="986352750"
                            android:textSize="12sp"
                            android:textColor="@color/colorPrimary"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="* Email : "
                            android:textSize="12sp"
                            android:paddingLeft="10dp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="rance935@163.com"
                            android:textSize="12sp"
                            android:textColor="@color/colorPrimary"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="* GitHub : "
                            android:textSize="12sp"
                            android:paddingLeft="10dp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/tv_github"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="https://github.com/Rance935"
                            android:textSize="12sp"
                            android:textColor="@color/colorPrimary"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="* 简书 : "
                            android:textSize="12sp"
                            android:paddingLeft="10dp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/tv_jianshu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="http://www.jianshu.com/users/8766a8a24881/latest_articles"
                            android:textSize="12sp"
                            android:textColor="@color/colorPrimary"/>

                    </LinearLayout>


                </LinearLayout>


            </android.support.v4.widget.NestedScrollView>
        </android.support.design.widget.CoordinatorLayout>

    </LinearLayout>
